--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Online Store</title>
 </head>
 <body>
-    <h2>Welcome to our store</h2>
+    <h2>Welcome to our store!</h2>
 </body>
 </html>
